--- a/e-project/angular.json
+++ b/e-project/angular.json
@@ -25,7 +25,7 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.css"
+              "src/styles.css","D:/Module2/Angular/project/e-project/node_modules/bootstrap/dist/css/bootstrap.min.css"
             ],
             "scripts": []
           },
@@ -87,7 +87,7 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.css"
+              "src/styles.css","D:/Module2/Angular/project/e-project/node_modules/bootstrap/dist/css/bootstrap.min.css"
             ],
             "scripts": []
           }
